# postmark-rs

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md
.github/ISSUE_TEMPLATE/: blank-issue.md  bug_report.md
.github/workflows/: audit.yml  ci.yml  release-plz.yml
docs/api/: README.md  compatibility.md  postmark-endpoints.md  updating-endpoint-coverage.md
docs/api/examples/: bulk.md  signatures.md  stats.md  triggers-data-removal.md
docs/plans/: 2026-03-21-existing-api-coverage-design.md  2026-03-21-existing-api-coverage-implementation.md  2026-03-22-postmark-api-parity-design.md  2026-03-23-api-wrapper-modernization-design.md  2026-03-23-api-wrapper-modernization-implementation-plan.md  2026-03-24-api-wrapper-readability-adjustment-design.md  2026-03-24-api-wrapper-readability-adjustment-implementation-plan.md
src/: api.rs  client.rs  lib.rs  reqwest.rs
src/api/: bounce.rs  bulk.rs  data_removal.rs  data_removals.rs  domains.rs  email.rs  inbound_rules.rs  message_streams.rs  messages.rs  meta.rs  query.rs  server.rs  signatures.rs  stats.rs  templates.rs  triggers.rs  types.rs  webhooks.rs
src/api/bounce/: activate_bounce.rs  delivery_stats.rs  get_bounce.rs  get_bounce_dump.rs  get_bounces.rs  list_bounces.rs
src/api/bulk/: get_bulk_email_batch.rs  get_bulk_status.rs  send_bulk.rs  send_bulk_email.rs
src/api/data_removal/: create_data_removal.rs  get_data_removal_status.rs
src/api/data_removals/: create_data_removal.rs  get_data_removal_status.rs
src/api/domains/: create_domain.rs  delete_domain.rs  edit_domain.rs  get_domain.rs  list_domains.rs  rotate_dkim.rs  verify_dkim.rs  verify_return_path.rs  verify_spf.rs
src/api/email/: send_email.rs  send_email_batch.rs  send_email_batch_with_templates.rs  send_email_with_template.rs
src/api/inbound_rules/: create_inbound_rule.rs  delete_inbound_rule.rs  list_inbound_rules.rs
src/api/message_streams/: archive_message_stream.rs  create_message_stream.rs  create_suppression.rs  delete_suppression.rs  edit_message_stream.rs  get_message_stream.rs  get_suppressions.rs  list_message_streams.rs  unarchive_message_stream.rs
src/api/messages/: bypass_blocked_inbound.rs  inbound_details.rs  inbound_search.rs  message_clicks.rs  message_opens.rs  outbound_details.rs  outbound_dump.rs  outbound_search.rs  retry_failed_inbound.rs  single_message_clicks.rs  single_message_opens.rs
src/api/server/: create_server.rs  delete_server.rs  edit_server.rs  edit_server_by_id.rs  get_current_server.rs  get_server.rs  list_servers.rs
src/api/signatures/: create_signature.rs  delete_signature.rs  edit_signature.rs  get_signature.rs  list_signatures.rs  request_new_dkim.rs  resend_confirmation.rs  resend_signature_confirmation.rs  verify_spf.rs
src/api/stats/: bounce_counts.rs  browser_platform_usage.rs  browser_usage.rs  click_counts.rs  click_location.rs  client_usage.rs  open_counts.rs  outbound_overview.rs  platform_usage.rs  sent_counts.rs  spam_counts.rs  stats_outbound.rs  tracked_email_counts.rs
src/api/templates/: copy_templates.rs  create_template.rs  delete_template.rs  edit_template.rs  get_template.rs  list_templates.rs  mod.rs  validate_template.rs
src/api/triggers/: create_inbound_rule_trigger.rs  delete_inbound_rule_trigger.rs  list_inbound_rule_triggers.rs
src/api/webhooks/: create_webhook.rs  delete_webhook.rs  edit_webhook.rs  get_webhook.rs  list_webhooks.rs
tests/: endpoint_parity.rs  send_email.rs  typed_ids.rs
