[package]
name = "postmark"
description = "Postmark rust client"
license = "MIT OR Apache-2.0"
authors = ["Pierre-Alexandre St-Jean <pa@stjean.me>"]
repository = "https://github.com/pastjean/postmark-rs"
homepage = "https://github.com/pastjean/postmark-rs"
documentation = "https://docs.rs/postmark"
keywords = ["postmark", "email", "e-mail", "http"]
readme = "README.md"
categories = ["api-bindings", "email", "web-programming::http-client"]
version = "0.11.3"
edition = "2018"

[dependencies]
async-trait = { version = "0.1" }
bytes = { version = "1.6" }
http = { version = "1.1" }
reqwest = { version = "0.12", optional = true, default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { version = "2.0" }
typed-builder = { version = "0.21" }
url = { version = "2.5" }
indexmap = { version = "2.2", features = ["serde"], optional = true }
time = { version = "0.3.17", features = ["serde-human-readable", "macros"] }

[features]
default = []
reqwest = ["dep:reqwest"]
reqwest-native-tls = ["reqwest", "reqwest/native-tls"]
reqwest-rustls-tls = ["reqwest", "reqwest/rustls-tls"]
indexmap = ["dep:indexmap"]

[dev-dependencies]
httptest = { version = "0.16" }
tokio = { version = "1.38", default-features = false, features = [
    "rt",
    "macros",
] }

# Getting all features for testing
postmark = { path = ".", features = ["reqwest", "reqwest-rustls-tls"] }
